<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Entrance Test On Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name : </string>
    <string name="phone_no">Mobile No. : </string>
    <string name="email_id">Email ID : </string>
    <string name="hint_username">Enter your name</string>
    <string name="hint_phone">Enter your mobile number</string>
    <string name="prompt_mail">Mail ID</string>
    <string name="button_register">Register</string>
    <string name="home_test">Start Test</string>
    <string name="title_activity_display_home">Home</string>
    <string name="title_activity_take_test">Take Test</string>
    <string name="tab_years">Years</string>
    <string name="tab_subject">Subjects</string>
    <string name="progress">Progress Report</string>
    <string name="solution">Solutions</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="like">Like us</string>
    <string name="title_activity_display_questions">Test</string>
    <string name="label_instructions">Instructions</string>
    <string name="label_questions">Questions</string>
    <string name="title_activity_display_category">Categories</string>
    <string name="button_view_instructions">View Instruction Page</string>
    <string name="title_activity_display_instructions">Test Instructions</string>
    <string name="new_test">New Test</string>
    <string name="title_activity_verification">Verification Code</string>
    <string name="label_VerificationCode">Verification Code</string>
    <string name="hint_VerificationCode"> Code</string>
    <string name="button_verify">Verify</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="title_activity_display_score">Score</string>
    <string name="label_subject">Subject : </string>
    <string name="label_totalQuestions">Total Questions : </string>
    <string name="label_correct">Correct Answers : </string>
    <string name="label_incorrect">Incorrect Answers : </string>
    <string name="label_unanswered">Unanswered Questions : </string>
    <string name="label_currentScore">Current Score : </string>
    <string name="label_averageScore">Average Score : </string>
    <string name="label_percentile">Percentile : </string>

</resources>