<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_subject"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/label_totalQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_totalQuestions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/label_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_correct"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/label_incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_incorrect"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/label_unanswered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_unanswered"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/label_currentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_currentScore"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/label_averageScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_averageScore"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/label_percentile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_percentile"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>