<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

   <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/text_userName"
        android:text="@string/user_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="20"
        android:hint="@string/hint_username"
        android:lines="@integer/One"
        android:inputType="textPersonName"
        android:maxLines="@integer/One"
        android:minLines="@integer/One"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_mobileNo"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/phone_no"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
   <EditText
        android:id="@+id/text_mobileNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView2"
        android:layout_below="@+id/text_userName"
        android:layout_alignLeft="@+id/text_userName"
        android:ems="20"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:lines="@integer/One"
        android:maxLines="@integer/One"
        android:minLines="@integer/One"
        android:textSize="12sp" >
    </EditText> 
    
   <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerMails"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/email_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

   <Spinner
        android:id="@+id/spinnerMails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView3"
        android:layout_below="@+id/text_mobileNo"
        android:layout_alignLeft="@+id/text_mobileNo"
        android:prompt="@string/prompt_mail"
        android:textSize="12sp" >
    </Spinner>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/button_register"
        android:onClick="registerUser"
         />
    
     <TextView 
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:text=""
        android:textColor="@color/errorColor"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
</RelativeLayout>